--- a/TestParse/fr.lproj/Localizable.strings
+++ b/TestParse/fr.lproj/Localizable.strings
@@ -7,6 +7,29 @@
 */
 
 
+
+///// UIButton /////
+"UIButton_Back" = "Retour";
+
+///// UIAlertView /////
+"UIAlertView_Title_Photo_Error" = "Impossible d'envoyer la photo";
+"UIAlertView_Problem_Title" = "Problème";
+"UIAlertView_Removal_Title" = "Suppression";
+"UIAlertView_ErrorLogin_Title" = "Erreur de connexion";
+"UIAlertView_Problem_Message" = "Il n'était pas possible d'effectuer cette action, s'il vous plaît essayer à nouveau plus tard.";
+"UIAlertView_Problem_Message2" = "Problème pendant la supression de la photo";
+"UIAlertView_Removal_Message" = "Êtes-vous sûr de vouloir suprimer cette photo ?";
+"UIAlertView_ErrorLogin_Message" = "Uh oh. L'utilisateur a annulé la connexion Facebook.";
+"UIAlertView_Dismiss" = "OK";
+"UIAlertView_Yes" = "Oui";
+"UIAlertView_No" = "Non";
+
+
+///// UIActionSheet /////
+"UIActionSheet_Cancel" = "Annuler";
+"UIActionSheet_Delete" = "Supprimer";
+
+
 ///// TutorialViewController /////
 "TutorialViewController_tuto_step_1" = "Regroupez tous vos events au même endroit.";
 "TutorialViewController_tuto_step_2" = "Regroupez tous vos events au même endroit.";
@@ -36,3 +59,64 @@
 "ChooseLastEventViewController_Weeks" = "semaines";
 "ChooseLastEventViewController_Month" = "mois";
 "ChooseLastEventViewController_Months" = "mois";
+
+
+///// PhotosImportedViewController /////
+"PhotosImportedViewController_OnFacebook" = "Sur Facebook";
+"PhotosImportedViewController_OnMyiPhone" = "Sur mon iPhone";
+"PhotosImportedViewController_NbPhotoFind" = "%i photos de l'évènement touvées";
+
+
+///// UploadFilesAutomaticViewController /////
+"UploadFilesAutomaticViewController_PhotosCount" = "%i/%i photos";
+
+
+///// SharePhotoViewController /////
+"SharePhotoViewController_Title" = "Test";
+"SharePhotoViewController_AddLegend" = "Ajoutez une légende à votre photo";
+
+
+///// PhotoDetailViewController /////
+"PhotoDetailViewController_Title" = "PHOTO";
+
+
+///// PhotosCollectionViewController /////
+"PhotosCollectionViewController_Title" = "dans %i jours";
+"PhotosCollectionViewController_Marker_Title" = "Sydney";
+"PhotosCollectionViewController_Marker_snippet" = "Australia";
+"PhotosCollectionViewController_OwnerEvent" = "Evènement organisé par %@";
+"PhotosCollectionViewController_Show_Label" = "Afficher les informations";
+"PhotosCollectionViewController_Hide_Label" = "Masquer les informations";
+
+
+///// EventDetailViewController /////
+"EventDetailViewController_Title" = "Dans x jours";
+"EventDetailViewController_Marker_Title" = "Sydney";
+"EventDetailViewController_Marker_snippet" = "Australia";
+"EventDetailViewController_Countdown" = "dans %i jours";
+"EventDetailViewController_OwnerEvent" = "Evènement organisé par %@";
+
+
+///// InfoHeaderCollectionView /////
+"InfoHeaderCollectionView_Details" = "Détails";
+"InfoHeaderCollectionView_Hide" = "Masquer";
+
+
+///// DetailDescriptionViewController /////
+"DetailDescriptionViewController_Title" = "DESCRIPTION";
+
+
+///// MapViewController /////
+"MapViewController_Marker_Snippet" = "Hello World";
+
+
+///// InvitedListViewController /////
+"InvitedListViewController_Title" = "INVITÉS";
+
+
+///// ListInvitationsController /////
+"ListInvitationsController_WhenWhere" = "%@ à %@";
+"ListInvitationsController_SendInvit" = "%@ vous a envoyé une invitation.";
+
+
+///// ListEvents /////
