• Correction badge et sections dans Album • Modification comportement bouton Valider/Terminer lors de l’import de photo • Ajout de contraintes dans la vue Album

--- a/TestParse/fr.lproj/Localizable.strings
+++ b/TestParse/fr.lproj/Localizable.strings
@@ -66,6 +66,7 @@
 "PhotosImportedViewController_OnFacebook" = "Sur Facebook";
 "PhotosImportedViewController_OnMyiPhone" = "Sur mon iPhone";
 "PhotosImportedViewController_NbPhotoFind" = "%i photos de l'évènement touvées";
+"PhotosImportedViewController_Finish" = "Terminer";
 
 
 ///// UploadFilesAutomaticViewController /////
