Correction de l’affichage persistant de la marmotte en arrière-plan dans les Invitations

--- a/TestParse/fr.lproj/Localizable.strings
+++ b/TestParse/fr.lproj/Localizable.strings
@@ -164,6 +164,8 @@
 ///// ListInvitationsController /////
 "ListInvitationsController_WhenWhere" = "%@ à %@";
 "ListInvitationsController_SendInvit" = "%@ vous a invité à cet évènement";
+"ListInvitationsController_NoPendingInvitation" = "Yeah !!!\nPlus aucune invitation en attente !";
+"ListInvitationsController_NoRefuseInvitation" = "Yeah !!!\nAucune invitation refusée !";
 
 
 ///// ListEvents /////
