Correction de la librairie GoogleAnalytics Ajout d’une phrase localisée

--- a/TestParse/en.lproj/Localizable.strings
+++ b/TestParse/en.lproj/Localizable.strings
@@ -193,6 +193,7 @@
 
 ///// ListEvents /////
 "ListEvents_Notifs" = "Notifs : %i";
+"ListEvents_NoEvent" = "No upcoming events ...";
 
 
 ///// MemoriesImportViewController /////
