--- a/TestParse/es.lproj/Localizable.strings
+++ b/TestParse/es.lproj/Localizable.strings
@@ -189,6 +189,7 @@
 
 ///// ListEvents /////
 "ListEvents_Notifs" = "Notificaciones  : %i";
+"ListEvents_NoEvent" = "No hay próximos eventos ...";
 
 
 ///// MemoriesImportViewController /////
